site/styles.css
/* ... */
.animate-start {
  transform: translate(0,0);
  opacity: 1.0;
}


@media (min-width:740px) {
  .bekk {  }
  .blank { top: 5px; }
  .kodemaker { bottom: 9px; }
}

/**/
/* Responsive */
/**/

@media (min-width:1850px) {
  body {
    font-size: 22px;
  }
  .ticket_btn_a{
    font-size: 18px !important;
  }
  #logo{
    width: 190px !important;
    width: 175px !important;
  }
  .menu-item-active:nth-child(1)::before{
    left: 36% !important;
  }
  .content__menu-item:nth-child(1)::after{
    left: 36% !important;
  }
  .menu-item-active:nth-child(2)::before{
    left: 32% !important;
  }
  .menu-item-active:nth-child(2)::after{
    left: 32% !important;
  }
  .content__menu-item:nth-child(2)::after{
    left: 32% !important;
  }
  .menu-item-active:nth-child(3)::after{
    left: 32% !important;
  }
  .menu-item-active:nth-child(3)::after{
    left: 32% !important;
  }
  .content__menu-item:nth-child(3)::after{
    left: 32% !important;
  }
  .content__menu-close::after{
    right: -9px !important;
    top: 2px;
  }
  .content__menu-close{
    margin-right: 12px;
  }
  .content__menu-item:nth-child(2){
    margin-left: 0.8em;
  }
}

@media (min-width: 1024px) {
  .information h3{
    margin-top: 0px !important;
  }
}

@media (max-width:1480px) and (min-width:1024px) {
  #logo{
    top: 30px;
  }
  .header__date{
    top: 56px;
  }
  #ticket_btn{
    margin-top: -1em;
  }
  .about_btn{
    margin-top: 1em;
  }
  .summary{
    top: 120px;
  }
}

@media (max-width:1400px) and (min-width:1024px) {
  .richard { width: 75px; }
  .luke { width: 62px; }
}

@media (max-width:774px) and (min-width:741px) {
  .richard { width: 75px; }
  .luke { width: 62px; }
}

@media (max-width:1700px) {
  .information {
    position: relative;
    bottom: 20px;
  }
}

@media (max-width:1200px) {
  .information {
    bottom: 40px;
  }
}

@media (max-width:1024px) and (min-width:740px) {
  .header__date{
    font-weight: 500;
    font-size: 1em;
    line-height: 32px;
    position: relative;
    top: 130px;
    padding-right: 364px;
    text-align: right;
  }

  .sponsors-platinum, .sponsors-gold, .sponsors-silver, .sponsors-about {
    width: 50%;
  }

  .what, .why {
    width: 60%;
  }

  .who, .contact {
    width: 30%;
  }

  .why, .contact {
    margin-top: 2em;
  }
}

@media (max-width:740px) and (min-width:320px) {
  .about_btn{
    display: none;
  }

  .content__page{
    margin: 70px auto 0 auto;
  }

  .speaker__image {
    width: 3.5em;
    margin-right: 1.222222em;
  }

  .backdrop-wrapper {
    margin-top: 0%;
  }

  .content__box {
    padding-top: 40px !important;
  }

  .what{
    margin-top: 3em !important;
  }

  .sponsors-platinum, .sponsors-gold, .sponsors-silver, .sponsors-about {
    width: 100%;
  }

  .content__menu-close {
    margin-right: 17px;
  }

  .who, .contact, .what, .why {
    width: 100%;
  }

  .information, .information-sponsors {
    padding: 0 1.5rem;
    padding-bottom: 60px;
  }

  .information__block {
    margin-top: 1em;
  }

  .backdrop-wrapper {
    height: 20vh;
  }

  .summary {
    padding: 0;
  }

  .summary__list {
    width: 100%;
    text-align: center;
  }

  .summary__list li {
    float: none;
    display: inline-block;
  }

  .content-open {
    visibility: hidden;
  }

  .backdrop-wrapper {
    height: 280px;
    width: 100vw;
    max-width: 100%;
    position: absolute;
    top: 0px;
    left: 0px;
    opacity: 0.3;
  }

  .header {
    flex-wrap: wrap;
    padding-right: 0px;
    padding-left: 0px;
    justify-content: center;
  }

  .summary {
    display: none;
  }

  .nav {
    width: 100%;
    text-align: center;
    padding-right: 0px;
    padding-left: 0px;
    padding-top: 15px;
  }

  .sponsor__list {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    width: 100%;
  }

  .content__page, .content__shapes {
    max-width: 100%;
  }

  .content__menu-wrapper {
    left: 20px;
    width: 93%;
    top: -40px;
  }

  #ticket_btn{
    display: none;
  }
  .mobile_ticket_btn{
    display: block;
    font-family: 'AvenirLTPro-Medium', sans-serif;
    z-index: 3;
  }
  .header{
    height: 330px;
  }
  #logo{
    top: 60px;
    z-index: 3;
    width: 100%;
    height: 165px;
    position: relative;
    left: 0;
  }
  .header__date{
    font-size: 1.44444444em;
    text-align: center;
    padding: 0;
    margin-top: 40px;
  }

}

@media (max-width:525px) and (min-width:320px) {
  .content__box {
    padding: 80px 5%;
  }
}

